[gd_scene load_steps=8 format=3 uid="uid://delniw4uhafon"]

[ext_resource type="Script" path="res://Scenes/tools.gd" id="1_q4f2m"]
[ext_resource type="Texture2D" uid="uid://b6wroevd67aoj" path="res://Assets/RawTextures/chisel_button_normal.png" id="1_tef88"]
[ext_resource type="Texture2D" uid="uid://b7alf0xdqx6jr" path="res://Assets/RawTextures/chisel_button_selected.png" id="2_ccqmx"]
[ext_resource type="Texture2D" uid="uid://bo4dco3swgb5g" path="res://Assets/RawTextures/bricks_button.png" id="3_7kvpd"]
[ext_resource type="Texture2D" uid="uid://ou26qhx4ufwp" path="res://Assets/RawTextures/bricks_button_selected.png" id="4_fu5oi"]
[ext_resource type="Texture2D" uid="uid://brhmvuiedy4fc" path="res://Assets/RawTextures/hammer_button_normal.png" id="5_yhfef"]
[ext_resource type="Texture2D" uid="uid://ditqdubqt11q" path="res://Assets/RawTextures/hammer_button_selected.png" id="6_b7kjg"]

[node name="ToolsInterface" type="CanvasLayer"]
visible = false
script = ExtResource("1_q4f2m")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Chisel" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
action_mode = 0
texture_normal = ExtResource("1_tef88")
texture_disabled = ExtResource("2_ccqmx")
stretch_mode = 3

[node name="BrickPile" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_7kvpd")
texture_disabled = ExtResource("4_fu5oi")
stretch_mode = 3

[node name="Hammer" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
texture_normal = ExtResource("5_yhfef")
texture_disabled = ExtResource("6_b7kjg")
stretch_mode = 3

[connection signal="pressed" from="HBoxContainer/Chisel" to="." method="_on_chisel_pressed"]
[connection signal="pressed" from="HBoxContainer/BrickPile" to="." method="_on_brick_pile_pressed"]
[connection signal="pressed" from="HBoxContainer/Hammer" to="." method="_on_hammer_pressed"]
